# UnlockEgyptParser

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  parsed_sites.json  parser.py  pyproject.toml  requirements.txt  research.py  site_researcher.py
docs/: DESIGN.md  PRD.md  TECH_STACK.md
models/: __init__.py
researchers/: __init__.py  arabic_terms.py  google_maps.py  governorate.py  tips.py  wikipedia.py
src/unlockegypt/: __init__.py  cli.py  site_researcher.py
src/unlockegypt/models/: __init__.py
src/unlockegypt/researchers/: __init__.py  arabic_terms.py  google_maps.py  governorate.py  tips.py  wikipedia.py
src/unlockegypt/utils/: __init__.py  config.py  progress.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_models.py  test_progress.py  test_researchers.py  test_site_researcher.py
utils/: __init__.py  config.py
